# manta-rewards-backup

contracts/: package.json
contracts/funds-distributor/: Cargo.toml
contracts/funds-distributor/examples/: funds-distributor-schema.rs
contracts/funds-distributor/src/: claim.rs  contract.rs  distributing.rs  eligibility.rs  lib.rs  native_distributions.rs  rewards.rs  state.rs  user_weights.rs
contracts/funds-distributor/src/tests/: unit.rs
